--- a/CloudGen/src/main/resources/static/css/student_enquiry_form.css
+++ b/CloudGen/src/main/resources/static/css/student_enquiry_form.css
@@ -3,7 +3,7 @@ space{
 	margin: 510px 50px 10px 50px;
 }
 body{
-	background-color: #F0F0F0;
+	background: linear-gradient(to top, rgba(0,0,0,0.5)50%,rgba(0,0,0,0.5)50%), url(1.jpg);
 }
 .form_container{
 	height: 100%;
@@ -11,21 +11,23 @@ body{
 }
 
 .fields{
-	border-radius: 5px;
-	border: 2px grey;
-	font-family: Tahoma, sans-serif;
+	font-family: Arial;
+	border-bottom: 2px solid #ff7200;
+    border-top: none;
+    border-right: none;
+    border-left: none;
+    background: transparent;
 	font-size: 15px;
 	height:25px;
-	width: 90%;
+	width: 30%;
 	margin: 5px 0px 30px 0px;
+	color: white;
+	font-weight: bold;
 }
-.elements{
-	font-family: Tahoma, sans-serif;
-	font-size: 15px;
-}
+
 .submit{
 	font-size: 20px;
-	font-family: Tahoma, sans-serif;
+	font-family: Arial;
 	color: white;
 	background-color: blue;
 	border-radius: 5px;
@@ -33,13 +35,24 @@ body{
 	margin: 0% 50%;
 }
 
-fields:active{
-	border:2px solid black;
-}
-.heading{
-	text-align: center;
-	font-size: 30px;
-	font-family: Tahoma, sans-serif;
-	
-}
 
+.heading{
+    width: 30%;
+    font-weight: bold;
+    
+    font-family: sans-serif;
+    text-align: center;
+    color: #ff7200;
+    font-size: 22px;
+    background-color: #fff;
+    border-radius: 10px;
+    margin: auto;
+    padding: 8px;
+}
+	
+
+
+::placeholder{
+	color: white;
+	font-weight: bold;
+}
